@@ -5,6 +5,8 @@ git-annex (0.03) UNRELEASED; urgency=low
   * Fix SIGINT handling.
   * Fix handling of files with unusual characters in their name.
   * Support building with Debian stable's ghc.
+  * Fixed memory leak; git-annex no longer reads the whole file list
+    from git before starting, and will be much faster with large repos.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 28 Oct 2010 13:46:59 -0400
 
